Fix Travis IRC template

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ notifications:
     on_success: change
     on_failure: always
     template:
-      - "%{repository} (%{commit}) : %{message} %{foo} "
+      - "%{repository} (%{commit}): %{message}"
       - "Build details: %{build_url}"
