--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
   - cd docs_source_files && hugo
 deploy:
   - provider: script
-    script: chmod +x ./deploy.sh && ./deploy.sh
+    script: chmod +x $TRAVIS_BUILD_DIR/deploy.sh && $TRAVIS_BUILD_DIR/deploy.sh
     skip_cleanup: true
     on:
       all_branches: true
