--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,21 @@
 install:
   - curl -LO https://github.com/gohugoio/hugo/releases/download/v0.56.0/hugo_0.56.0_Linux-64bit.deb
   - sudo dpkg -i hugo_0.56.0_Linux-64bit.deb
+  - sudo rm hugo_0.56.0_Linux-64bit.deb
 script:
-  - cd docs_source_files && hugo
+  - cd docs_source_files && hugo && cd ..
 deploy:
   - provider: script
     script: chmod +x $TRAVIS_BUILD_DIR/deploy.sh && $TRAVIS_BUILD_DIR/deploy.sh
     skip_cleanup: true
     on:
       all_branches: true
-notifications:
-  irc:
-    channels:
-      - "chat.freenode.net#selenium"
-    on_success: change
-    on_failure: always
-    template:
-      - "%{repository} (%{commit}): %{message}"
-      - "Build details: %{build_url}"
+# notifications:
+#   irc:
+#     channels:
+#       - "chat.freenode.net#selenium"
+#     on_success: change
+#     on_failure: always
+#     template:
+#       - "%{repository} (%{commit}): %{message}"
+#       - "Build details: %{build_url}"
