Building all branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ install:
   - curl -LO https://github.com/gohugoio/hugo/releases/download/v0.56.0/hugo_0.56.0_Linux-64bit.deb
   - sudo dpkg -i hugo_0.56.0_Linux-64bit.deb
   - sudo rm hugo_0.56.0_Linux-64bit.deb
+branches:
+  only:
+    - gh-pages
+    - /.*/  
 script:
   - cd docs_source_files && hugo && cd ..
 deploy:
