--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,12 @@ branches:
     - /.*/  
 script:
   - cd docs_source_files && hugo && cd ..
-deploy:
-  - provider: script
-    script: chmod +x $TRAVIS_BUILD_DIR/deploy.sh && $TRAVIS_BUILD_DIR/deploy.sh
-    skip_cleanup: true
-    on:
-      branch: gh-pages
+# deploy:
+#   - provider: script
+#     script: chmod +x $TRAVIS_BUILD_DIR/deploy.sh && $TRAVIS_BUILD_DIR/deploy.sh
+#     skip_cleanup: true
+#     on:
+#       branch: gh-pages
 notifications:
   irc:
     channels:
