--- a/docs_source_files/config.toml
+++ b/docs_source_files/config.toml
@@ -117,12 +117,6 @@ weight = 4
 languageName = "中文简体"
 
 [[Languages.zh-cn.menu.shortcuts]]
-[Languages.fr]
-title = "Documentation Selenium"
-weight = 4
-languageName = "Français"
-
-[[Languages.fr.menu.shortcuts]]
 name = "<i class='fab fa-fw fa-github'></i> GitHub repo"
 identifier = "ds"
 url = "https://github.com/SeleniumHQ/docs"
@@ -142,6 +136,12 @@ weight = 20
 name = "<i class='fas fa-fw fa-bullhorn'></i> How to contribute"
 url = "contributing"
 weight = 30
+
+[Languages.fr]
+title = "Documentation Selenium"
+weight = 5
+languageName = "Français"
+
 [[Languages.fr.menu.shortcuts]]
 name = "<i class='fas fa-fw fa-exclamation-triangle'></i> Signaler un problème"
 url = "https://github.com/seleniumhq/docs/issues"
@@ -156,3 +156,9 @@ weight = 20
 name = "<i class='fas fa-fw fa-bullhorn'></i> Comment contribuer"
 url = "contributing"
 weight = 30
+
+[[Languages.fr.menu.shortcuts]]
+name = "<i class='fab fa-fw fa-github'></i> GitHub repo"
+identifier = "ds"
+url = "https://github.com/SeleniumHQ/docs"
+weight = 10
