Update weight value and Selenium
* Update weight value based on the review. 
* Change セレニウム (Japanese literal expression of Selenium) to Selenium 
because it's commonly written in English when referencing to a browser 
automation tool, Selenium.

--- a/docs_source_files/config.toml
+++ b/docs_source_files/config.toml
@@ -169,8 +169,8 @@ url = "https://github.com/SeleniumHQ/docs"
 weight = 10
 
 [Languages.ja]
-title = "セレニウムドキュメント"
-weight = 1
+title = "Seleniumドキュメント"
+weight = 6
 languageName = "日本語"
 baseURL = "https://seleniumhq.github.io/docs/site/ja"
 
